[project]
name = "uv-ass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
uv-ass = "uv_ass:main"
say-hello = "hello_agent.agent_hello:helloAgent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
